Fixed plancards alignment

--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@
 .plan_list {
     width: 80%;
     margin: auto;
+    text-align: center;
 }
 
 .plan {
